--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,14 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**.*",
+
+                "input": "../../globalAssets/images",
+  
+                "output": "./assets/"
+              }
             ],
             "styles": [
               "src/styles.css"
@@ -84,7 +91,14 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**.*",
+
+                "input": "../../globalAssets/images",
+  
+                "output": "./assets/"
+              }
             ],
             "styles": [
               "src/styles.css"
